# Nutri_AI

./: NutricionistAI_bot.session  NutricionistAI_bot.session-journal  README.md  app.py  food_image_analyzer.py  nutricionista.py  pyproject.toml  requirements.txt  telegram.py  teste.py
