[project]
name = "nutri-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "GVG", email = "gabrielveronezgiolo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain-openai (>=0.3.11,<0.4.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langgraph (>=0.3.20,<0.4.0)",
    "langchain-core (>=0.3.49,<0.4.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pyrogram (>=2.0.106,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"